--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <h1>Now You can Lease Your Town House at 40 Cypress Avenue, Oaklands</h1>
+        <h1>Now You can Lease this Town House at 40 Cypress Avenue, Oaklands</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
