--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery - 7 Liguanea Avenue Apartment</title>
+    <title>Gallery - 40 Cypress Avenue (Oaklands)</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -28,13 +28,12 @@
         <h2>Gallery</h2>
         <div class="gallery">
             <!-- Replace with your image paths -->
-            <img src="images\living-room.jpeg" alt="living room">
-            <img src="images\kitchen.jpeg" alt="kitchen">
-            <img src="images\master-bedroom.jpeg" alt="master bedroom">
-            <img src="images\second-room.jpeg" alt="second room">
-            <img src="images\bathroom-1.jpeg" alt="master bathroom">
-            <img src="images\bathroom-2.jpeg" alt="second bathroom">
-            <img src="images\powder-room-2.jpeg" alt="powder room">
+            <img src="images\living-room.webp" alt="living room">
+            <img src="images\kitchen.webp" alt="kitchen">
+            <img src="images\master-bedroom.webp" alt="master bedroom">
+            <img src="images\second-room.webp" alt="second room">
+
+            <img src="images\powder-room.webp" alt="powder room">
             <!--            
 <img src="images\wash-room.jpeg" alt="wash room">
 -->
