--- a/gallery.html
+++ b/gallery.html
@@ -28,17 +28,27 @@
         <h2>Gallery</h2>
         <div class="gallery">
             <!-- Replace with your image paths -->
-            <img src="images\living-room.webp" alt="living room">
-            <img src="images\kitchen.webp" alt="kitchen">
-            <img src="images\master-bedroom.webp" alt="master bedroom">
-            <img src="images\second-room.webp" alt="second room">
+            <div class="room">
+                <img src="images\living-room.webp" alt="living room">
+                <p>Living Room</p>
+                <img src="images\kitchen.webp" alt="kitchen">
+                <p>Kitchen</p>
+                <img src="images\master-bedroom.webp" alt="master bedroom">
+                <p>Master Bedroom</p>
+                <img src="images\second-room.webp" alt="second room">
+                <p>Second Bedroom</p>
 
-            <img src="images\powder-room.webp" alt="powder room">
-            <!--            
-<img src="images\wash-room.jpeg" alt="wash room">
--->
+                <img src="images\powder-room.webp" alt="powder room">
+                <p>Powder Room</p>
+
+
+            </div>
+
+
             <!-- Add more images as needed -->
         </div>
+
+
     </main>
 
     <footer>
