modified gallery.html with descriptions of each piece

--- a/gallery.html
+++ b/gallery.html
@@ -30,16 +30,17 @@
             <!-- Replace with your image paths -->
             <div class="room">
                 <img src="images\living-room.webp" alt="living room">
-                <p>Living Room</p>
+                <p>Living Room:Combines modern and traditional elements, featuring a large sofa, fireplace, contemporary art, and a welcoming atmosphere with natural light.
+                </p>
                 <img src="images\kitchen.webp" alt="kitchen">
-                <p>Kitchen</p>
+                <p>Kitchen:Visualizes a modern kitchen with high-end stainless steel appliances, white cabinetry, a large island, and pendant lights, accented by natural greenery.</p>
                 <img src="images\master-bedroom.webp" alt="master bedroom">
-                <p>Master Bedroom</p>
+                <p>Master Bedroom:Showcases a luxurious setup with a king-sized bed, high-quality linen, a seating area, and sophisticated color schemes.</p>
                 <img src="images\second-room.webp" alt="second room">
-                <p>Second Bedroom</p>
+                <p>Second Bedroom:Features a queen-sized bed with a plush headboard, nightstands, and ambient lighting, decorated in a neutral palette with a pop of color.</p>
 
                 <img src="images\powder-room.webp" alt="powder room">
-                <p>Powder Room</p>
+                <p>Powder Room:Presents a cozy and elegant space with a pedestal sink, ornate mirror, and classic lighting, complemented by vintage-patterned wallpaper.</p>
 
 
             </div>
